# Samples

./: README.md
ASM/: build.gradle  settings.gradle
ASM/app/: build.gradle
ASM/plugins/: build.gradle
AntiShake/: settings.gradle
AntiShake/app/: build.gradle
AntiShake/lib/: build.gradle
AspectJDemo/: build.gradle  settings.gradle
AspectJDemo/app/: build.gradle
BreakPad/: build.gradle  settings.gradle
BreakPad/app/: build.gradle
BreakPad/breakpadlib/: build.gradle
BreakPad/breakpadlib/src/main/cpp/breakpad/: CMakeLists.txt
BreakPad/breakpadlib/src/main/cpp/breakpad/src/tools/windows/dump_syms/: dump_syms_unittest.cc
BreakPad/crash/: build.gradle
CommonMVVM/app/: build.gradle
CustomView/: settings.gradle
CustomView/app/: build.gradle
DynamicIcon/: DynamicIcon.md
DynamicIcon/app/: build.gradle
GradlePlugin/: build.gradle  settings.gradle
GradlePlugin/app/: build.gradle
GradlePlugin/buildsrc/: build.gradle
GradlePlugin/plugins/: build.gradle
HandlerThread/app/: build.gradle
HotFix/: build.gradle  settings.gradle
HttpDns/: build.gradle  settings.gradle
IOC_Runtime/: build.gradle  settings.gradle
Jetpack/: settings.gradle
Loader/: build.gradle  settings.gradle
MVVM/: build.gradle  settings.gradle
Menu/: README.md
Modules/: README.md  build.gradle  gradle.properties  settings.gradle
MultiChannel/: Channel.md
Netty/: .classpath  .project
NettyDemo/: .classpath  .project
PluginDemo/: build.gradle  settings.gradle
Proxy/: settings.gradle
ViewBinder/: build.gradle  settings.gradle
VirtualAPK/: VirtualAPK.md
(+521 files in other folders)
